--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,12 @@
   "dependencies": {
     "@nestjs/axios": "^0.0.1",
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^7.5.1",
     "axios": "^0.21.1",
+    "mongoose": "^5.13.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
